# goit-pythonweb-hw-12

./: .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
docs/source/: conf.py  index.rst  modules.rst
migrations/: env.py
migrations/versions/: 690105cb03db_add_tokens_table.py  a1c4f4be92d1_add_user_role.py  b2f6d9a4c8aa_add_password_reset_token_type.py  c3d8e2b7f1aa_add_refresh_token_type.py  c92611af6229_init.py
src/api/: auth_routes.py  contact_routes.py  health.py  user_routes.py
src/conf/: config.py  constants.py
src/db/: __init__.py  session.py
src/models/: __init__.py  contact_model.py  token_model.py  user_model.py  user_role.py
src/repositories/: __init__.py  auth_repository.py  contact_repository.py  token_repository.py  user_repository.py
src/schemas/: __init__.py  contact_schemas.py  current_user.py  user_schemas.py
src/security/: passwords.py
src/services/: auth_service.py  contact_service.py  email_service.py  password_reset_page_service.py  redis_service.py  upload_file_service.py  user_service.py
src/utils/: logger.py  token_cleanup.py
templates/: reset_password.html  verify_email.html
tests/: conftest.py
tests/api/: test_user_avatar_roles.py
tests/integration/: conftest.py  test_auth_routes_integration.py  test_contact_routes_integration.py  test_health_integration.py  test_user_routes_integration.py
tests/repositories/: test_auth_repository.py  test_contact_repository.py  test_token_repository.py  test_user_repository.py
tests/unit/: test_auth_service_unit.py  test_contact_service_unit.py  (+9 more)
