[project]
name = "goit-pythonweb-hw-10"       
version = "0.1.0"
description = ""
authors = [
    {name = "Myshko Alona",email = "myshko.alona@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "colorama (>=0.4.6,<0.5.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "fastapi-mail (>=1.4.1,<2.0.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "pydantic (>=2.13.3,<3.0.0)",
    "greenlet (>=3.4.0,<4.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "cloudinary (>=1.44.2,<2.0.0)",
    "python-multipart (>=0.0.27,<0.0.28)",
    "bcrypt (==4.0.1)",
    "redis (>=7.4.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sphinx (>=9.1.0,<10.0.0)",
    "sphinx-rtd-theme (>=3.1.0,<4.0.0)"
]
